--- a/src/App.module.css
+++ b/src/App.module.css
@@ -91,10 +91,11 @@ h1, h2, h3, h4, h5, h6 {
 	border: 1px solid;
 	border-radius: 5px;
 	transition: all 0.5s;
+	background-color: #B0EAAF;
 }
 
 .input_button:hover {
-	background-color: #a9f1b9;
+	background-color: #96C395;
 }
 
 .list {
