--- a/src/App.module.css
+++ b/src/App.module.css
@@ -84,6 +84,7 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 5px 15px;
 	border: 1px solid;
 	border-radius: 5px;
+	margin-right: 10px;
 }
 
 .input_button {
