--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,8 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	color: #445b43;
+	font-family:Verdana, Geneva, Tahoma, sans-serif
 
 &:before, &:after {
 	-moz-box-sizing: border-box;
@@ -78,13 +80,27 @@ h1, h2, h3, h4, h5, h6 {
 
 .main {
 	padding: 50px;
+	display: flex;
+	gap: 50px;
 }
 
 .input {
 	padding: 5px 15px;
 	border: 1px solid;
 	border-radius: 5px;
-	margin-right: 10px;
+	margin-right: 15px;
+	height: 40px;
+	width: 260px;
+	font-size: 18px;
+	border: 2px solid;
+}
+
+.input::placeholder {
+	color: #96C395;
+}
+
+.input:focus {
+	box-shadow:5px 5px 5px rgba(150,	195, 149, 50%);
 }
 
 .input_button {
@@ -93,6 +109,12 @@ h1, h2, h3, h4, h5, h6 {
 	border-radius: 5px;
 	transition: all 0.5s;
 	background-color: #B0EAAF;
+	border: 2px solid;
+	height: 40px;
+	width: 100px;
+	font-size: 18px;
+	font-weight: bold;
+	letter-spacing: 2px;
 }
 
 .input_button:hover {
@@ -105,7 +127,6 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top: 20px;
 	font-size: 18px;
 	line-height: 26px;
-	text-align: center;
 }
 
 .list li{
@@ -116,4 +137,17 @@ h1, h2, h3, h4, h5, h6 {
 
 .selected {
 	background-color: greenyellow;
+}
+
+.profile {
+	width: 300px;
+	height: fit-content;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin-top: 100px;
+	padding: 30px;
+	border: 2px solid #B0EAAF;
+	font-size: 18px;
+
 }
