refactor: change component Profile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -151,5 +151,9 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 30px;
 	border: 2px solid #B0EAAF;
 	font-size: 18px;
+}
 
+.profile h1{
+	font-weight: bold;
+	font-size: 24px;
 }
